--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>30 Days Of Javascript Challenges</h1>
 </body>
-<script src="day1.js"></script>
+<!-- <script src="day1.js"></script> -->
+<script src="day2.js"></script>
 </html>
