--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>30 Days Of Javascript Challenges</h1>
 </body>
 <!-- <script src="day1.js"></script> -->
-<script src="day2.js"></script>
+<!-- <script src="day2.js"></script> -->
+<script src="day3.js"></script>
 </html>
