--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 </body>
 <!-- <script src="day1.js"></script> -->
 <!-- <script src="day2.js"></script> -->
-<script src="day3.js"></script>
+<!-- <script src="day3.js"></script> -->
+<script src="day4.js"></script>
+
 </html>
