--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <!-- <script src="day6.js"></script> -->
 <!-- <script src="day7.js"></script> -->
 <!-- <script src="day8.js"></script> -->
-<script src="day9.js"></script>
+<!-- <script src="day9.js"></script> -->
+<script src="day10.js"></script>
 
 </html>
